syntax = "proto3";


package discount;


option go_package = "discountpb/";

message DiscountRequest { 
  string user_id = 1;
  string product_id = 2; 
}

message DiscountResponse { double discount = 1; }


service DiscountService {
  rpc GetDiscount(DiscountRequest) returns (DiscountResponse) {};
};
